--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,16 +1,16 @@
 ---
 
 # required variable
-#nessus_agent_key: ''
-#nessus_agent_group: ''
+nessus_agent_key: 'unset'
+nessus_agent_group: 'unset'
 
 # can be either a repository package or a path to a file
 #     nessus_agent_package: nessus-agent
 #     nessus_agent_package: /tmp/nessus-agent_6.8.1_amd64.deb
 nessus_agent_package: 'NessusAgent'
 
-nessus_agent_host: cloud.tenable.com
-nessus_agent_port: 443
+# nessus_agent_host: cloud.tenable.com
+# nessus_agent_port: 443
 
 nessus_manage: True
 nessus_install: True
