--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,5 +12,5 @@ nessus_agent_package: 'NessusAgent'
 # nessus_agent_host: cloud.tenable.com
 # nessus_agent_port: 443
 
-nessus_manage: True
-nessus_install: True
+nessus_manage: true
+nessus_install: true
