--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,10 +1,10 @@
 - name: Install Nessus Agent from repo
-  package:
+  ansible.builtin.package:
     name: "{{nessus_agent_package}}"
-    update_cache: yes
+    update_cache: true
     cache_valid_time: "{{apt_cache_valid_time | default (omit)}}"
   when: "'.deb' not in nessus_agent_package"
 
 - name: Install Nessus Agent from .deb package
-  apt: deb={{nessus_agent_package}}
+  ansible.builtin.apt: deb={{nessus_agent_package}}
   when: "'.deb' in nessus_agent_package"
